# blacklist-devops

./: .gitignore
blacklist/: .env.template  Dockerfile  entrypoint.sh  pyproject.toml
blacklist/src/: app.py
blacklist/src/controllers/: add_email.py
blacklist/src/database/: engine.py  exec_create_all.py  session.py
blacklist/src/models/: email_model.py
blacklist/src/schemas/: email_schema.py
blacklist/tests/: test_templates.py
